fixing postgresql import

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=mike
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.password=${DATABASE_PASSWORD_SERVICE_ROLE_KEY}
-spring.datasource.driver-class-name=org.postrgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
