Adicionado: .env.sample && Atualizado: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=mike
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD_SERVICE_ROLE_KEY}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
