--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "6.0.0",
+    "@capacitor/android": "^6.0.0",
     "@capacitor/app": "6.0.0",
+    "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
+    "@capacitor/preferences": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
