--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ionic App",
-  "name": "My Ionic App",
+  "short_name": "DEVO",
+  "name": "DEVO",
   "icons": [
     {
       "src": "assets/icon/favicon.png",
