--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/core": "6.0.0",
     "@capacitor/filesystem": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/google-maps": "^5.4.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/preferences": "^6.0.0",
@@ -27,6 +28,7 @@
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
