--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^6.0.0",
+    "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "6.0.0",
     "@capacitor/filesystem": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
-    "@capacitor/google-maps": "^5.4.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/preferences": "^6.0.0",
@@ -26,14 +25,13 @@
     "@ionic/pwa-elements": "^3.3.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@react-google-maps/api": "^2.19.3",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.4.5",
     "ionicons": "^7.0.0",
-    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
