Atualizado: pom.xml -> Adicionei a configuração para a classe inicializadora do projeto

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.fmgcompany.mike.MikeApplication</mainClass>
+				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
