fix: atributo duracao -> transformado em método, para pegar o valor dele

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main/java/com/fmgcompany/mike/MikeApplication.java",
-            "use": "@vercel/n"
+            "src": "target/mike-0.0.1-SNAPSHOT.jar",
+            "use": "@vercel/static-build"
         }
-    ]
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+      ]
 }
