--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
