fix: unnecessary imports removed. import poppins/inter fonts to html. update tailwind config

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/preferences": "^6.0.0",
+    "@capacitor/share": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/pwa-elements": "^3.3.0",
     "@ionic/react": "^8.0.0",
