--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
 					<mainClass>com.fmgcompany.mike.MikeApplication</mainClass>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
 			
 		</plugins>
 	</build>
