--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/share": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic/cli": "^7.2.0",
     "@ionic/pwa-elements": "^3.3.0",
     "@ionic/react": "^8.2.0",
     "@ionic/react-router": "^8.2.0",
