--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-css": "tailwindcss build src/styles.css -o public/styles.css"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
