--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,89 @@
-/.idea/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependency directories (Node.js)
+node_modules
+.pnp
+.pnp.js
+
+# Build outputs (Node.js)
+dist
+dist-ssr
+
+# Environment variables (Node.js)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IntelliJ IDEA-specific files
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# Java-specific files and directories
+/target/
+/*.jar
+/*.war
+/*.ear
+
+# Maven directories
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+log/
+release.properties
+
+# Gradle directories
+.gradle/
+/build/
+
+# Eclipse-specific files
+.classpath
+.project
+.settings/
+bin/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+/coverage
+
+# Production
+/dist
+
+# Miscellaneous
+.DS_Store
+/.nx
+/.nx/cache
+
+# Optional eslint cache (Node.js)
+.eslintcache
+
+# IDE-specific files
+.idea/
+
+# Ignore npm/yarn debug files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
