--- a/frontend-gio/package.json
+++ b/frontend-gio/package.json
@@ -11,6 +11,7 @@
     "build-css": "tailwindcss build src/styles.css -o public/styles.css"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
