--- a/frontend-gio/package.json
+++ b/frontend-gio/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
