feat: creating the authentications to 'despachante' with jwt

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=mike
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+api.security.token.secret=${JWT_SECRET_KEY}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=trues
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
