--- a/frontend-gio/package.json
+++ b/frontend-gio/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
