--- a/frontend-gio/package.json
+++ b/frontend-gio/package.json
@@ -20,8 +20,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/babel__core": "^7.20.5",
+    "@types/google.maps": "^3.58.1",
+    "@types/json-schema": "^7.0.15",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
