--- a/frontend-devo/package.json
+++ b/frontend-devo/package.json
@@ -7,11 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "lint": "eslint"
   },
   "dependencies": {
     "@capacitor/android": "6.0.0",
@@ -57,10 +54,8 @@
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.19",
-    "cypress": "^13.11.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.7.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
