--- a/frontend-devo/package.json
+++ b/frontend-devo/package.json
@@ -11,10 +11,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "6.0.0",
-    "@capacitor/app": "6.0.0",
-    "@capacitor/camera": "^6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/camera": "^6.1.0",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
