--- a/frontend-gio/package.json
+++ b/frontend-gio/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.22.3",
     "zod": "^3.23.8"
   },
@@ -25,6 +26,7 @@
     "@types/json-schema": "^7.0.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
