--- a/frontend-devo/package.json
+++ b/frontend-devo/package.json
@@ -37,6 +37,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "xvfb": "^0.4.0"
@@ -51,6 +52,7 @@
     "@types/node": "^20.14.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.19",
